assets/style.css
:root {
  --black: #000000;
  --cherry: #d7224c;
  --forgiveness-red: #b31e2d;
  --desert-storm: #f8f8f8;
  --midnight-pearl: #70316e;
  --prussian-blue: #0d3258;
  --white: #ffffff;

  --hover-pink: #9a3897;

  --roboto: "Roboto", Helvetica;
  --thasadith: "Thasadith", Helvetica;
  --zilla_slab: "Zilla Slab", Helvetica;

  width: 100%;
}

body {
  text-align: center;
  background-color: var(--white);
  margin: 0;
}

.row {
  margin-inline: auto;
  position: relative;
  max-width: 1080px;
  padding-left: max(10vw, calc((100vw - 1280px) / 2));
  padding-right: max(10vw, calc((100vw - 1280px) / 2));
  overflow: hidden;
  max-width: 1280px;
}

.row:not(:first-of-type) {
  margin-block: 3rem;
}

p {
  color: var(--black);
  font-family: var(--roboto);
  font-size: 1.25rem;
  font-weight: normal;
  margin-top: 2.25rem;
}

.bold {
  font-weight: bold;
}

.italic {
  font-style: italic;
}

.column {
  width: 30vw;
  max-width: 455px;
  min-width: 355px;
}

ul li {
  list-style-type: disc;
  font-size: 1.25rem;
  text-align: left;
}

.inner-list {
  margin-left: 2em;
  list-style-type: circle !important;
}

.display-desktop {
  display: block;
}

.display-tablet {
  display: none;
}

img {
  z-index: -100;
}


/* ------------- 1. header section ------------ */

#header {
  background-image: url("header-assets/purple-squiggles.svg"),
    url("header-assets/purple-dots-green-square-right.svg"),
    url("header-assets/orange-blob-left.svg"),
    url("header-assets/teal-blob-right.svg"),
    url("header-assets/orange-blob-line-left.svg"),
    url("header-assets/purple-blob-line-right.svg"),
    url("header-assets/pink-blob-left.svg"),
    url("header-assets/green-blob-right.svg"),
    url("header-assets/blue-blob-center.png");
  background-position: 0 12px, 97% 13px, 0 0, 100% 0, 0 0, 100% 0, 0 0, 100% 0,
    50% 0;
  background-size: 25% auto, 9% auto, 27% auto, 20% auto, 21% auto, 25% auto,
    28.5% auto, 28% auto, 60% auto;
  background-repeat: no-repeat;
}

img.star {
  margin-inline: auto;
  padding-top: 1.5rem;
  width: 15%;
  min-width: 110px;
}


h3.supertitle {
  background-image: url("yellow-squiggle-longest.svg");
  background-repeat: no-repeat;
  background-position: center bottom;
  background-size: 10.5em;
  color: var(--prussian-blue);
  font-family: var(--thasadith);
  font-size: 1.75rem;
  padding-bottom: 11px;
  margin-bottom: -8px;
}

h1.title {
  color: var(--prussian-blue);
  font-family: var(--zilla_slab);
  font-size: 2.25rem;
  font-weight: 600;
}

#see-samples-button {
  background-color: var(--midnight-pearl);
  width: 180px;
  height: 50px;
  border-radius: 40px;
  transition: 175ms ease-in-out;
  font-size: 24px;
  margin-inline: auto;
}

#see-samples-button a {
  color: var(--white);
  text-decoration: none;
  font-family: var(--roboto);
  line-height: 2;
}

#see-samples-button:hover {
  background-color: var(--hover-pink);
  box-shadow: 0px 4px 8px 1px rgb(0 0 0 / 0.25);
  transition: 175ms ease-in-out;
  transform: scale(1.025);
}

/* ------------- 2. triple icon section ------------ */

#triple-icon {
  padding-block: 2.25rem;
  background-color: var(--desert-storm);
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: flex-end;
}

#triple-icon .wrapper img.icon {
  width: clamp(60px, 11vw, 145px);
  height: auto;
}

.triple-icon-title {
  color: var(--prussian-blue);
  font-family: var(--zilla_slab);
  font-size: 2.25rem;
  font-weight: 600;
  margin-block: 1.5rem 0;
}

h4.italic {
  font-style: italic;
  font-family: var(--roboto);
  font-weight: 400;
  font-size: 1.5rem;
  margin-block: 0;
}

#triple-icon .wrapper img.line {
  width: 80%;
  max-width: 210px;
  min-width: 120px;
  height: 5px;
}

h5.supporting-text {
  font-family: var(--roboto);
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.125;
  margin-block: 0.25rem;
}

/* ------------- 3. what to expect section (and 5. new campus resources ------------ */

#what-to-expect h1.main-title {
  background-image: url("red-straight-line.svg");
  font-family: var(--zilla_slab);
  color: var(--prussian-blue);
  font-weight: 600;
  font-size: 2.75rem;
  background-size: 7em;
  background-repeat: no-repeat;
  background-position: center bottom;
  padding-bottom: 8px;
}

.row-1, .row-2, .row-3 {
  text-align: left;
  font-family: var(--roboto);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
}

.row-1 h1.row-title,
.row-2 h1.row-title,
.row-3 h1.row-title{
  background-repeat: no-repeat;
  background-position: left bottom;
  font-family: var(--zilla_slab);
  color: var(--prussian-blue);
  padding-bottom: 16px;
  font-weight: 700;
  margin-inline: auto;
  margin-block: 0.5rem;
}

.row-1 h1.row-title {
  background-image: url("yellow-squiggle-longest.svg");
  background-size: 9.5em;
}

.row-2 h1.row-title {
  background-image: url("yellow-squiggle-short.svg");
  background-size: 7.5em;
}

.row-3 h1.row-title {
  background-image: url("yellow-squiggle-longest.svg");
  background-size: 10.75em;
}

.row-1 p, .row-2 p, .row-3 p {
  margin-block: 1rem;
}
 
.row-1 img, .row-2 img, .row-3 img {
  /* width: clamp(283px, 33vw, 507px); */
  width: 100%;
  height: auto;
}


/* ------------- 4. well strong kind chart section ------------ */


#well-strong-kind-chart img {
  width: 78vw;
  margin-inline: auto;
  margin-block: 1rem;
}

/* -------------- 5. new campus resources section -------------- */


#new-campus-resources {
  background-color: var(--desert-storm);
  padding-block: 3.5rem;
}

#new-campus-resources ul {
  margin-bottom: 2rem;
}

#new-campus-resources p {
  line-height: 1;

}


















/*
  _______       ____  _      ______ _______     _____ _________     ___      ______  _____ 
 |__   __|/\   |  _ \| |    |  ____|__   __|   / ____|__   __\ \   / / |    |  ____|/ ____|
    | |  /  \  | |_) | |    | |__     | |     | (___    | |   \ \_/ /| |    | |__  | (___  
    | | / /\ \ |  _ <| |    |  __|    | |      \___ \   | |    \   / | |    |  __|  \___ \ 
    | |/ ____ \| |_) | |____| |____   | |      ____) |  | |     | |  | |____| |____ ____) |
    |_/_/    \_\____/|______|______|  |_|     |_____/   |_|     |_|  |______|______|_____/ 

*/

@media (max-width: 991px) {


  /* ------------- GLOBALS ------------ */

  .column {
    width: 100%;
    min-width: unset;
    max-width: unset;
    margin-inline: auto;
  }

  .column img {
    min-width: 480px;
  }

  ul {
    display: inline-block;
  }

  .display-desktop {
    display: none;
  }
  
  .display-tablet {
    display: block;
  }

  .row {
    padding-inline: 6%;
    margin-block: 0;
  }

  p {
    font-size: 1.5rem;
  }

/* ---- END GLOBAL TABLET STYLES ---- */

  h3.supertitle {
    font-size: 2em;
  }

  h1.title {
    font-size: 3rem;
  }


  .triple-icon-title {
    font-size: 1.75rem;
  }

  h4.italic {
    font-size: 1.25rem;
  }

  h5.supporting-text {
    font-size: 1.25rem;
  }

  /* ------------- 3. what to expect TABLET ------------ */

  #what-to-expect h1.main-title {
    font-size: 3.5rem;
    margin-block: 0 1.25rem;
  }

  .row-1, .row-2, .row-3 {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .row-1 h1.row-title,
  .row-2 h1.row-title,
  .row-3 h1.row-title {
    background-position: center bottom;
    font-weight: 700;
    font-size: 3rem;
    margin-inline: auto;
    margin-block: 2rem -1rem;
  }

  .row-1 p, .row-2 p, .row-3 p {
    font-size: 1.5rem;
  }

  .row-1 img, .row-2 img {
    margin-block: -1rem;
  }

  .row-1 img, .row-2 img, .row-3 img {
    width: 80%;
  }

  /* ------------- 4. well strong kind chart TABLET ------------ */

  #well-strong-kind-chart img {
    width: 86vw;
  }

  #new-campus-resources img {
    margin-block: 3rem 2rem;
  }

}


/*
  __  __  ____  ____ _____ _      ______      _____ _________     ___      ______  _____ 
 |  \/  |/ __ \|  _ \_   _| |    |  ____|    / ____|__   __\ \   / / |    |  ____|/ ____|
 | \  / | |  | | |_) || | | |    | |__      | (___    | |   \ \_/ /| |    | |__  | (___  
 | |\/| | |  | |  _ < | | | |    |  __|      \___ \   | |    \   / | |    |  __|  \___ \ 
 | |  | | |__| | |_) || |_| |____| |____     ____) |  | |     | |  | |____| |____ ____) |
 |_|  |_|\____/|____/_____|______|______|   |_____/   |_|     |_|  |______|______|_____/ 
 
*/

@media (max-width: 576px) {


  .row {
    padding-inline: 4%;
  }

  #header {
    background-size: 34% auto, 17% auto, 33% auto, 28% auto, 29% auto, 33% auto,
    36% auto, 35% auto, 90% auto;
  }

  /* triple icon section vertical on mobile */
  #triple-icon {
    flex-direction: column;
    align-items: center;
  }

  .wrapper:not(:last-of-type) {
    margin-bottom: 3.5rem;

  }

  #triple-icon .wrapper img.icon {
    width: 50vw;
    min-width: 140px;
    height: auto;
  }

  #triple-icon .wrapper img.line {
    width: 90%;
    max-width: 210px;
    height: 6px;
  }

  .triple-icon-title {
    margin-top: 1rem;
    font-size: 2.5rem;
  }

  h4.italic {
    font-size: 1.75rem;
  }

  h5.supporting-text {
    font-size: 1.75rem;
  }

  /* ------ 4. well strong kind chart section ------ */


  #well-strong-kind-chart img {
    width: 91vw;
  }

}

